# python-ldraw

./: .gitignore  pyproject.toml  requirements.txt
ldraw/: config.py  dirs.py
