[tool.poetry]
name = "pyldraw"
description="A package for working with LDraw format files."
version = "0.0.0"
authors = [
    "David Boddie <david@boddie.org.uk>",
    "Matthieu Berthomé<rienafairefr@gmail.com>"
]
license = "GPL-3.0-only"
readme = "README.rst"
packages = [{include = "ldraw"}]
repository = "https://github.com/nadegelemperiere/python-ldraw/"
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Testers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License"
]
include = ["templates/*.mustache"]

[tool.poetry.dependencies]
python = "^3.11"
platformdirs = "*"
numpy = "^1.24.2"
pymklist = "^1.1.0"
pystache = "^0.6.0"
attrdict3 = "^2.0.2"
progress = "^1.6"
PyYaml = "^6.0"
Pillow = "^9.4.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.extras]
plugin = ["poetry"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nadegelemperiere/python-ldraw//issues"


[build-system]
requires = [
    "poetry-core>=1.4.0",
    "poetry-dynamic-versioning>=0.21.4"
]
build-backend = "poetry.core.masonry.api"
